@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121025"
-#define public MagickPackageReleaseDate "snapshot-20121025"
+#define public MagickPackageVersionAddendum ".020121029"
+#define public MagickPackageReleaseDate "snapshot-20121029"
