@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x131000
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 13,10,0
-#define MagickChangeDate   "20121025"
-#define MagickReleaseDate  "snapshot-20121025"
+#define MagickChangeDate   "20121029"
+#define MagickReleaseDate  "snapshot-20121029"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
